# tic-tac-toe-haskell

./: .gitignore  README.md  TicTacToeHaskell.cabal
src/: AI.hs  Board.hs  Colors.hs  Config.hs  Display.hs  GameLogic.hs  GameRunner.hs  Input.hs  InputValidation.hs  Main.hs  Markers.hs  Menu.hs  Player.hs  Score.hs  ScorePG.hs  ScoreTXT.hs  Settings.hs
test/: AISpec.hs  BoardSpec.hs  ColorsSpec.hs  GameLogicSpec.hs  InputValidationSpec.hs  MarkersSpec.hs  ScorePGSpec.hs  ScoreSpec.hs  ScoreTXTSpec.hs  SettingsSpec.hs  SpecHelper.hs  SpecHelperSpec.hs
