name:                TicTacToeHaskell
version:             0.1.0.0
synopsis:            TTT in Haskell
author:              Sarah Sunday
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable TicTacToeHaskell
  default-language:  Haskell2010
  main-is:           Main.hs
  hs-source-dirs:    src
  ghc-options:       -Wall -Werror
  build-depends:     base >=4.8 && <4.9,
                     parallel,
                     split,
                     directory,
                     monad-loops,
                     containers

library
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror
  hs-source-dirs:    src

test-suite sp
   default-language: Haskell2010
   main-is:          Spec.hs
   hs-source-dirs:   test,
                     src
   ghc-options:      -Wall -Werror
   type:             exitcode-stdio-1.0
   build-depends:    base >=4.8 && <4.9,
                     parallel,
                     split,
                     directory,
                     containers,
                     hspec == 2.*,
                     QuickCheck
